crates/parser/tests/snapshots/prefix_block_unclosed_quote_inner.snap
---
source: crates/parser/tests/snapshots.rs
---
# prefix-block-unclosed-quote-inner

## Input

```
s. {
  "unclosed value
  b 2
}

```

## CST

```
SOURCE_FILE@0..31
  PREFIX_BLOCK@0..31
    WORD_KEY@0..2
      WORD@0..2 "s."
    SPACE@2..3 " "
    OPEN_BRACE@3..4 "{"
    NEWLINE@4..5 "\n"
    SPACE@5..7 "  "
    ENTRY@7..22
      QUOTED_KEY@7..22
        DOUBLE_QUOTE@7..8 "\""
        STRING@8..22 "unclosed value"
    NEWLINE@22..23 "\n"
    SPACE@23..25 "  "
    ENTRY@25..29
      WORD_KEY@25..26
        WORD@25..26 "b"
      SPACE@26..27 " "
      INTEGER@27..28
        NUMERAL@27..28 "2"
      NEWLINE@28..29 "\n"
    CLOSE_BRACE@29..30 "}"
    NEWLINE@30..31 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "missing closing quote",
        range: 22..22,
    },
    SyntaxError {
        message: "missing value for the key",
        range: 22..22,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..2 "s.",
            },
            open_brace: OPEN_BRACE@3..4 "{",
            items: [
                Entry {
                    key: QuotedKey {
                        open_quote: DOUBLE_QUOTE@7..8 "\"",
                        string: STRING@8..22 "unclosed value",
                        close_quote: DOUBLE_QUOTE@7..8 "\"",
                    },
                    value: none,
                },
                Entry {
                    key: WordKey {
                        word: WORD@25..26 "b",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@27..28 "2",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@29..30 "}",
        },
    ],
}
```

vim:ft=markdown
